--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-  <title>دیوارکت</title>
-	</head>
+  	<title>دیوارکت</title>
+	<link rel="icon" type="image/x-icon" href="DivarCatFav.png">
+  </head>
 
-  <body dir="rtl" style="text-align:right">
+  <body dir="rtl">
    <embed type="text/html" src="https://script.google.com/macros/s/AKfycbwHSHCf9Suv_MahfVE-BVHhV3f9scAVp6WnQQP1lWm9-Y7VWPoCj9l4bCvkLsrI8jfyBg/exec" width="500" height="200">
   </body>
 
