--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
   <head>
   	<title>دیوارکت</title>
 	<link rel="icon" type="image/x-icon" href="DivarCatFav.png">
+	  <style>
+		  .loader {
+			  position: fixed;
+			  z-index: 99;
+			  top: 0;
+			  left: 0;
+			  width: 100%;
+			  height: 100%;
+			  background: white;
+			  display: flex;
+			  justify-content: center;
+			  align-items: center;
+			  background: lightgray;
+		   }
+			
+			.loader > img {
+			  width: 100px;
+			}
+			
+			.loader.hidden {
+			  animation: fadeOut 1s;
+			  animation-fill-mode: forwards;
+			}
+		  	
+			@keyframes fadeOut {
+			  100% {
+			    opacity: 0;
+			    visibility: hidden;
+			  }
+			}
+	  </style>
   </head>
 
-  <body dir="rtl">
-   <embed type="text/html" src="https://script.google.com/macros/s/AKfycbwHSHCf9Suv_MahfVE-BVHhV3f9scAVp6WnQQP1lWm9-Y7VWPoCj9l4bCvkLsrI8jfyBg/exec" width="500" height="200">
+  <body dir="rtl" style" height:750px">
+   <div class="loader">
+      <img src="https://www.clipartmax.com/png/full/197-1970959_whf-logo-spinner-to-indicate-loading-transparent-loading-heart-gif.png" alt="Loading..." />
+   </div>
+   <embed type="text/html" src="https://script.google.com/macros/s/AKfycbyDUWMwSk6BiSoWX6RUk7K6Gk45mrLdnxAPNLWI-cxtZrfZ-azJ8GvqgbmD0vZrvrG5xg/exec" width="100%" height="100%">
   </body>
+	<script>
+		let $ = document
+		let loading = $.querySelector(".loader")
 
+		function loadHandler() {
+			setInterval(function (){
+			loading.classList.add("hidden")
+			},2000)
+		}
+
+		window.addEventListener("load",loadHandler)
+
+	</script>
 </html>
