--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 	  </style>
   </head>
 
-  <body dir="rtl" style" height:750px">
+  <body dir="rtl" style="
+    height: 750px;
+">
    <div class="loader">
       <img src="https://www.clipartmax.com/png/full/197-1970959_whf-logo-spinner-to-indicate-loading-transparent-loading-heart-gif.png" alt="Loading..." />
    </div>
