--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 			    visibility: hidden;
 			  }
 			}
+		  .load{
+			  position: absolute;
+			  margin-top: 156px;
+		  }
 	  </style>
   </head>
 
@@ -41,6 +45,7 @@
 ">
    <div class="loader">
       <img src="https://www.clipartmax.com/png/full/197-1970959_whf-logo-spinner-to-indicate-loading-transparent-loading-heart-gif.png" alt="Loading..." />
+	   <p class"load">منتظر بمانید ....</p>
    </div>
    <embed type="text/html" src="https://script.google.com/macros/s/AKfycbyDUWMwSk6BiSoWX6RUk7K6Gk45mrLdnxAPNLWI-cxtZrfZ-azJ8GvqgbmD0vZrvrG5xg/exec" width="100%" height="100%">
   </body>
